2002-05-22  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* gas/mips/rol64.s: New file, test of drol, dror macros.
	* gas/mips/rol64.d: Likewise.
	* gas/mips/mips.exp: Add new test.

2002-05-20  Nick Clifton  <nickc@cambridge.redhat.com>

	* gas/arm/arm.exp: Replace deprecated command line switches
	with their modern equivalents.
	* gas/arm/arm7t.d: As above.
	* gas/arm/armv1.d: As above.
	* gas/arm/fpa-dyadic.d: As above.
	* gas/arm/fpa-mem.d: As above.
	* gas/arm/fpa-monadic.d: As above.
	* gas/arm/inst.d: As above.
	* gas/arm/ldconst.d: As above.
	* gas/arm/xscale.d: As above.

2002-05-13  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/x86-64-opcode.s: Pad out end of .text with zeros.
	* gas/i386/x86-64-opcode.d: Adjust.

2002-05-02  Nick Clifton  <nickc@cambridge.redhat.com>

	* gas/arm/arm7t.s: Add thumb mode "sub r?, #0" and "add r?, #0".
	* gas/arm/arm7t.d: Add expected results.  (Make sure that the
	subtract is not converted into an add).

2002-04-23  H.J. Lu <hjl@gnu.org>

	* gas/mips/elempic.d: Use empic.l.
	* gas/mips/telempic.d: Likewise.
	* gas/mips/tempic.d: Likewise.

2002-04-23  H.J. Lu <hjl@gnu.org>

	* gas/hppa/parse/parse.exp: Don't expect failure on line separator
	test on hppa*-*-linux* nor hppa*-*-netbsd*.

2002-04-22  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/mips-gp64-fp32.l: New file.
	* gas/mips/mips-gp64-fp32.d: Use mips-gp64-fp32.l to check stderr
	output.
	* gas/mips/mips-gp64-fp64.l: New file.
	* gas/mips/mips-gp64-fp64.d: Use mips-gp64-fp64.l to check stderr
	output.

2002-04-22  Chris Demetriou  <cgd@broadcom.com>

	* lib/gas-defs.exp (run_dump_test): Support new attribute "stderr"
	which is a file used to regexp_diff the assembler's pruned stderr
	output.
	(write_file): New helper function to write a string into a file.

	* gas/mips/empic.l: New file which matches empic tests' warnings.
	* gas/mips/empic.d: Use empic.l.

2002-04-19  Nick Clifton  <nickc@cambridge.redhat.com>
