@@ -1,3 +1,10 @@
+Wed May 22 14:26:07 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* gas/sh/pcrel-coff.s: New file.
+	* gas/sh/pcrel-coff.d: Likewise.
+	* gas/sh/basic.exp: For coff, don't do dsp test,
+	and a modified pcrel test.
+
 2002-05-22  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
 
 	* gas/mips/rol64.s: New file, test of drol, dror macros.
